# policy-lapse-early-warning

./: .gitignore  Makefile  README.md  app.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
knowledge/: retention_playbook.md
src/lapse/: __init__.py  config.py  data.py  explain.py  features.py  labels.py  rag.py  train.py
tests/: conftest.py  test_data.py  test_labels.py  test_rag.py  test_train.py
